@startuml

class StreamingPlatform{
- String appName
- ArrayList<User> users

- ArrayList<Media> medias
+ StreamingPlatform(String appName)


+ getters/setter()
+ login(String userName, String password)
+ loadUsers()
+ loadMedias()
+ interfaceLoop
+ static void main(String[] args)
}

class User{
- String username
- String password
- int birthdayYear
- String gender
- ArrayList<Media> seen
- ArrayList<Media> saved
- int id
- static int idCount

+ User(String username, String password, String birthdayYear, String gender)
+ getters/setter()

}

package "util"{

class TextUI{
- Scanner scan

+ void displayMSG(String msg)
+ String promptText (String msg)
+ int promptNumeric (String msg))
}

class FileIO{
+ HashMap<User> readUserData(String path)
+ void saveData(ArrayList<User> users, String path)
+ HashMap<Media> readMediaData(String path)
}

}

abstract class Media{
- String mediaName
- int releaseYear
- String genre
- float IMDBScore

+ Media( String mediaName, int releaseYear, String genre, float IMDBScore)
+ playMedia(String mediaName)
+ addMediaToList()
+ removeMediaFromList()
}

class Movie extends Media{
+ Movie(super)
}

class Series extends Media{
- ArrayList<Season> seasons
+ Series(super)
+ addSeason()
+ removeSeason()
}

class Season{
- int seasonID
- ArrayList<Episode> episodes
+ addEpisode()
+ removeEpisode()
}

class Episode{
- String title
- int episodeID
- int duration
+ getters/setters()
}

StreamingPlatform *-- Media

User *-- Media

StreamingPlatform *-- User

Series *-- Season

Season *-- Episode


@enduml